Update README and unify UI/navigation fixes

--- a/app/src/main/res/layout/activity_eat_place_detail.xml
+++ b/app/src/main/res/layout/activity_eat_place_detail.xml
@@ -217,8 +217,9 @@
         android:layout_height="wrap_content"
         android:background="@android:color/white"
         app:itemIconSize="24dp"
-        app:itemIconTint="@color/gray"
-        app:itemTextColor="@color/gray"
+        app:itemIconTint="@color/nav_item_color_state"
+        app:itemTextColor="@color/nav_item_color_state"
+        app:labelVisibilityMode="labeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
