--- a/app/src/main/res/layout/activity_person_detail.xml
+++ b/app/src/main/res/layout/activity_person_detail.xml
@@ -38,7 +38,10 @@
         app:menu="@menu/bottom_nav_menu"
         app:itemIconTint="@color/nav_item_color_state"
         app:itemTextColor="@color/nav_item_color_state"
+        app:itemTextAppearanceActive="@style/BottomNavigationActiveText"
+        app:itemTextAppearanceInactive="@style/BottomNavigationInactiveText"
         app:labelVisibilityMode="labeled"
+        app:itemHorizontalTranslationEnabled="false"
         app:itemIconSize="24dp"
         android:background="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
